--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
 
               <div class="row">
                 <div class="col-sm-5">
-                  <p><a href="https://opensource.org/licenses/MIT" target="_blank">Cardano is an Open Source project.</a></p>
+                  <p><a href="https://opensource.org/licenses/MIT" target="_blank">卡尔达诺是一个开放源代码的项目</a></p>
 
                     <p>Cardano is a software platform ONLY and does not conduct any independent diligence on or substantive review of any blockchain asset, digital currency, cryptocurrency or associated funds. You are fully and solely responsible for evaluating your investments, for determining whether you will exchange blockchain assets based on your own, and for all your decisions as to whether to exchange blockchain assets with Cardano. In many cases, blockchain assets you exchange on the basis of your research may not increase in value, and may decrease in value. Similarly, blockchain assets you exchange on the basis of your research may increase in value after your exchange.</p>
 
