--- a/_includes/header.html
+++ b/_includes/header.html
@@ -30,13 +30,13 @@
       <div class="col-md-6 col-md-offset-3">
 
 
-      <h1>Cardano Settlement Layer <span>Documentation</span></h1>
+      <h1>卡尔达诺清算层<span>文档</span></h1>
 
       <form id="site_search_form" class="" action="javascript:io_search_site()">
 
 
                       <div class="input-group">
-                        <input id="site_search_input" type="text" class="form-control input-lg" placeholder="Search docs ..." onfocus="io_search_site()" />
+                        <input id="site_search_input" type="text" class="form-control input-lg" placeholder="搜索文档 ..." onfocus="io_search_site()" />
                             <span class="input-group-btn">
                               <button type="submit" class="btn btn-default btn-lg"><em class="fa fa-search"></em></button>
                             </span>
