--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -12,11 +12,13 @@
                 <div class="col-sm-5">
                   <p><a href="https://opensource.org/licenses/MIT" target="_blank">卡尔达诺是一个开放源代码的项目</a></p>
 
-                    <p>Cardano is a software platform ONLY and does not conduct any independent diligence on or substantive review of any blockchain asset, digital currency, cryptocurrency or associated funds. You are fully and solely responsible for evaluating your investments, for determining whether you will exchange blockchain assets based on your own, and for all your decisions as to whether to exchange blockchain assets with Cardano. In many cases, blockchain assets you exchange on the basis of your research may not increase in value, and may decrease in value. Similarly, blockchain assets you exchange on the basis of your research may increase in value after your exchange.</p>
+                    <p>卡尔达诺是一个软件平台，它绝不会变成私有，也绝不会对任何区块链资产，电子货币，加密货币或相关基金进行审查。您应完全和全权对您的投资负责，根据自身需要换取卡尔达诺区块链资产。在多数情况下，基于您的研究，投资的区块链资产可能不会增值，还有可能会贬值。同样的，基于您的研究投资的区块链资产可能会增值。
+                    </p>
 
-                    <p>Past performance is not indicative of future results. Any investment in blockchain assets involves the risk of loss of part or all of your investment. The value of the blockchain assets you exchange is subject to market and other investment risks.</p>
+                    <p>过去的表现并不能指示未来的结果。任何对区块链资产的投资都有部分或全部投资损失的风险。您投资的区块链资产的价值取决于市场以及其他投资风险。
+                    </p>
                     <br>
-                    <p><a href="https://cardanofoundation.org/project/"><small>The Project</small></a> &nbsp; | &nbsp; <a href="https://cardanofoundation.org/protocol/"><small>The Protocol</small></a> &nbsp; | &nbsp; <a href="https://cardanofoundation.org/foundation/"><small>The Foundation</small></a> &nbsp; | &nbsp; <a href="https://cardanofoundation.org/learn-more/"><small>Learn More</small></a></p>
+                    <p><a href="https://cardanofoundation.org/project/"><small>项目</small></a> &nbsp; | &nbsp; <a href="https://cardanofoundation.org/protocol/"><small>协议</small></a> &nbsp; | &nbsp; <a href="https://cardanofoundation.org/foundation/"><small>基金会</small></a> &nbsp; | &nbsp; <a href="https://cardanofoundation.org/learn-more/"><small>了解更多</small></a></p>
 
                 </div>
 
@@ -31,26 +33,26 @@
                     </div>
                 <div class="col-sm-6">
                   <ul class="nolist pd0 margin0">
-                    <li><a href="https://cardanoexplorer.com" title="An open source block explorer for the Cardano project" target="_blank">Cardano Blockchain Explorer</a></li>
-                    <li><a href="https://cardanolaunch.com" title="Final development steps for main net launch" target="_blank">Cardano Launch</a></li>
-                    <li><a href="https://cardanoroadmap.com" title="Development path of the Cardano project" target="_blank">Cardano Roadmap</a></li>
-                    <li><a href="https://github.com/input-output-hk/cardano-sl" title="Cardano SL repository" target="_blank">Cardano SL Source</a></li>
-                    <li><a href="https://cardanofoundation.org" title="Supervisory and educational body for the Cardano Protocol" target="_blank">Cardano Foundation</a></li>
-                    <li><a href="https://cardanohub.org" title="Cardano Protocol Hub" target="_blank">Cardano Hub</a></li>
-                    <li><a href="https://whycardano.com" target="_blank" title="Why we are building Cardano">Why Cardano</a></li>
-                    <li><a href="https://www.youtube.com/channel/UCbQ9vGfezru1YRI1zDCtTGg" target="_blank">Cardano Foundation YouTube</a></li>
-                    <li><a href="https://twitter.com/CardanoStiftung" title="Follow the Foundation" target="_blank">Cardano Foundation Twitter</a></li>
+                    <li><a href="https://cardanoexplorer.com" title="An open source block explorer for the Cardano project" target="_blank">卡尔达诺区块链浏览器</a></li>
+                    <li><a href="https://cardanolaunch.com" title="Final development steps for main net launch" target="_blank">卡尔达诺 Launch</a></li>
+                    <li><a href="https://cardanoroadmap.com" title="Development path of the Cardano project" target="_blank">卡尔达诺路线图</a></li>
+                    <li><a href="https://github.com/input-output-hk/cardano-sl" title="Cardano SL repository" target="_blank">卡尔达诺清算层源代码</a></li>
+                    <li><a href="https://cardanofoundation.org" title="Supervisory and educational body for the Cardano Protocol" target="_blank">卡尔达诺基金会</a></li>
+                    <li><a href="https://cardanohub.org" title="Cardano Protocol Hub" target="_blank">卡尔达诺 Hub</a></li>
+                    <li><a href="https://whycardano.com" target="_blank" title="Why we are building Cardano">为什么选择卡尔达诺</a></li>
+                    <li><a href="https://www.youtube.com/channel/UCbQ9vGfezru1YRI1zDCtTGg" target="_blank">卡尔达诺 YouTube</a></li>
+                    <li><a href="https://twitter.com/CardanoStiftung" title="Follow the Foundation" target="_blank">卡尔达诺 Twitter</a></li>
                   </ul>
                 </div>
 
                 <div class="col-sm-6">
                   <ul class="nolist pd0 margin0">
-                    <li><a href="https://cardano.herokuapp.com" title="Join the conversation" target="_blank">Cardano Slack</a></li>
-                    <li><a href="https://www.reddit.com/r/cardano/" title="Join the conversation" target="_blank">Cardano Reddit </a></li>
-                    <li><a href="http://cardanohub.org" title="Community hub for the ecosystem" target="_blank">Cardano Community</a></li>
-                     <li><a href="https://daedaluswallet.io" title="Open source platform" target="_blank">Daedalus Platform</a></li>
+                    <li><a href="https://cardano.herokuapp.com" title="Join the conversation" target="_blank">卡尔达诺 Slack</a></li>
+                    <li><a href="https://www.reddit.com/r/cardano/" title="Join the conversation" target="_blank">卡尔达诺 Reddit </a></li>
+                    <li><a href="http://cardanohub.org" title="Community hub for the ecosystem" target="_blank">卡尔达诺 社区</a></li>
+                     <li><a href="https://daedaluswallet.io" title="Open source platform" target="_blank">Daedalus 平台</a></li>
                     <li><a href="https://iohk.io" title="Development partner" target="_blank">IOHK</a></li>
-                    <li><a href="https://iohk.io/blog/" target="_blank">IOHK blog</a></li>
+                    <li><a href="https://iohk.io/blog/" target="_blank">IOHK 博客</a></li>
                     <li><a href="https://www.youtube.com/channel/UCBJ0p9aCW-W82TwNM-z3V2w" target="_blank">IOHK YouTube</a></li>
                   </ul>
                 </div>
