fix: Google analytics

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -44,6 +44,17 @@
 
 <script>(function(){document.documentElement.className='js'})();</script>
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-75002639-5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-75002639-5');
+</script>
+
+
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css" type="text/css" media="all" />
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat">
 <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Roboto%3A100%2C300%2C500&#038;subset=latin&#038;ver=4.4.2" type="text/css" media="all" />
